# teems-solver

./: .gitignore  README  README.md
bin_parser/: Makefile  parse_variables.py
docker/: Dockerfile
docker/base_build/: Dockerfile
docker/base_layer/: Dockerfile
docker/dev/: Dockerfile  template
docker/expedited_build/: Dockerfile
docker/full_build/: Dockerfile  Dockerfile_layered
docker/stable/: Dockerfile
docker/user_build/: Dockerfile
singularity/: Singularity.intel
singularity/dev/: Singularity.intel  notes.txt
singularity/stable/: Singularity.intel
solver/: ddeps.f  ha_cgeglobal.h  ha_cgeiof.c  hsl_mc66d.f90  hsl_mp48d.f90  main.c  makefile
src/: ha_cgefparse.c  ha_cgeglobal.h  ha_cgetab.c  ha_mp48.f90  ha_newfparse.c  ha_newmfparse.c  makefile  mp48_mod.sh
tarballs/cgepack/: cgepack.tar.xz
tarballs/hsl/: hsl_misc.tar.xz
tarballs/hsl/scratch/ma48/: ChangeLog  Makefile.in  README  acinclude.m4  configure  configure.ac
tarballs/hsl/scratch/ma48/example/: Makefile.am  Makefile.in  ma48ds.f  ma48ds.output  ma48ds1.data  ma48ds1.f  ma48ds1.output  ma48ss.data  ma48ss.f  ma48ss.output  ma48ss1.data  ma48ss1.f  ma48ss1.output
tarballs/hsl/scratch/ma48/src/: Makefile.am  Makefile.in  ddeps.f  ma48d.f  ma48s.f  sdeps.f
teems-parser/: Makefile  export_solution.c  parse_variables.py
